test/semantic_errors/while.obw
module whilecheck

class Main is
  this() is
    var i : Integer := 10

    while i loop
      i := i.Minus(1)
    end

    printf("res = %d\n", i)
  end
end
